# libzonotope

./: CMakeLists.txt  LICENSE  README.md  index.html  params.json
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: FindGMP.cmake
include/: cell_enum.hpp  combination_base.hpp  combination_inverse_container.hpp  combination_kernel_container.hpp  combination_kernel_container_iml.hpp  combination_traversal.hpp  combination_volume_container.hpp  compare_by_angle.hpp  container_output_functor.hpp  eigen_utils.hpp  event_point_2.hpp  hyperplane.hpp  interior_point.hpp  linalg.hpp  output_functor_base.hpp  preprocess_generators.hpp  reverse_search.hpp  standardize_vector.hpp  standardize_vector_CGAL.hpp  type_casting_functor.hpp  type_traits_utils.hpp  update_inverse.hpp  update_kernel.hpp  vertex_enum.hpp  zonotope.hpp  zonotope_halfspaces.hpp  zonotope_halfspaces_iml.hpp  zonotope_halfspaces_output_functor.hpp  zonotope_vertex_adjacency_oracle_CGAL.hpp  zonotope_volume.hpp  zonotope_volume_output_functor.hpp
lib/: CMakeLists.txt
python/: README.md  setup.py  zonotope.py
scripts/: polymake_test.pl  test.sage  zonotope.sage
src/: CMakeLists.txt  Makefile  libzonotope.py  zonotope_c.cpp  zonotope_c.h  zonotope_extern.cpp  zonotope_volume_extern.cpp
tests/: CMakeLists.txt  Makefile  main_cell_enum.cpp  main_zonotope_halfspaces.cpp  main_zonotope_halfspaces_iml.cpp  main_zonotope_volume.cpp  test_utils.hpp  test_vertex_enum.cpp  test_zonotope_halfspaces.cpp  test_zonotope_volume.cpp
